2015-06-06  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.11.0 released
        =========================

        Correct model gradient computation
        Increased number of integration iterations for energy dispersion (#1472)
        Add GOptimizerLM::logger() method, logger constructor takes pointer (#1471)
        Replaced fixed precision integration by fixed iterations (#1466)
        Implement rejection method for skymap Monte Carlo (#1465)


2015-05-22  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.10.0 released
        =========================

        Add optional PHASE information to CTA event lists
        Use URL path informtion in GVOClient connection to Hub
        Ignore empty string parameters in GModel::is_valid()
        Add some constructors
        Add classname methods to Python interface (#1321)
        Rename CTA cube analysis classes (#1269)
        Do not dump unqueried parameters (#1349)
        Add GBilinear class
        Add WCS projections (MOL)
        Add GXmlElement::has_attribute() method
        Add GSkymap scaling operators (#1296)
        Add GSkymap::extract() method (#1442)
        Implement GApplicationPar range checking (#285)
        Forbid appending to text, comment and PI XML nodes (#804)
        Increase precision for diffuse model Npred computation (#1248)
        Implement observation definition reader/writer (#1429)
        Remove etrue flag from CTA background IRF (#1437)
        Allow appending of empty intervals to GEbounds and GGti
        Add single interval constructor to GGti
        Allow calling GNodeArray::set_value() for a single node
        Add GTI and livetime information to GCTACubeExposure
        Add GModelSpatial::contains method (#1446)
        Add GModelSpatialEllipticalGauss class (#1412)
        Add GVOHub class (#1229)
        Add CTA Prod2 instrument response function (#1464)

